# floor-heating-controller-esp32

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  sdkconfig
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-11-maintenance-run.md
docs/superpowers/specs/: 2026-04-11-maintenance-run-design.md
http_examples/: api.http  http-client.env.json  http-client.private.env.json.example
main/: CMakeLists.txt  idf_component.yml  log_dispatch.c  log_dispatch.h  log_udp.c  log_udp.h  main.c  maintenance.c  maintenance.h  notify.c  notify.h  ntp.c  ota.c  pump.c  temp_sensor.c  udp_logging.c  web.c  wifi.c  wifi.h
main/config/: config.h  credentials-example.h
